# RAG-Support-Forecast

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: analyze_results.py  run_experiment.py
src/rag_forecast/: cache.py  config.py  data.py  forecasting.py  metrics.py  pipeline.py  prompts.py  retrieval.py
tests/: test_data.py  test_metrics.py
